Comportamiento de navegación interna entre listado de noticias.