@@ -3,11 +3,13 @@ package es.arquia.magnolia.components.models.news;
 import static es.arquia.magnolia.templates.constants.ContextBeanConstants.contextBeanNewsNodeList;
 import static es.arquia.magnolia.templates.constants.ContextBeanConstants.contextBeanParentPathString;
 
-import java.util.LinkedList;
+import java.util.Iterator;
 import java.util.List;
 
 import javax.jcr.Node;
+import javax.jcr.RepositoryException;
 
+import es.arquia.magnolia.functions.I18nURLFunctions;
 import info.magnolia.context.Context;
 import info.magnolia.context.MgnlContext;
 import info.magnolia.rendering.model.RenderingModel;
@@ -20,36 +22,64 @@ public class SubHeaderNavNewsModel <T extends ConfiguredTemplateDefinition> exte
 	
 	private String parentPath;
 	
-	private LinkedList<Node> linkedNavigationList;
+	private I18nURLFunctions i18nURLFunctions;
 
-	public SubHeaderNavNewsModel(Node content, ConfiguredTemplateDefinition definition, RenderingModel<?> parent) {
+	public SubHeaderNavNewsModel(Node content, ConfiguredTemplateDefinition definition, RenderingModel<?> parent, final I18nURLFunctions i18nURLFunctions) {
 		super(content, definition, parent);
-		navigationNewsList = (List<Node>)MgnlContext.getAttribute(contextBeanNewsNodeList, Context.SESSION_SCOPE);
-		parentPath = (String)MgnlContext.getAttribute(contextBeanParentPathString, Context.SESSION_SCOPE);
-		linkedNavigationList = new LinkedList<>();
-		linkedNavigationList.addAll(navigationNewsList);
+		navigationNewsList = MgnlContext.getAttribute(contextBeanNewsNodeList, Context.SESSION_SCOPE);
+		parentPath = MgnlContext.getAttribute(contextBeanParentPathString, Context.SESSION_SCOPE);
+		this.i18nURLFunctions = i18nURLFunctions;
 	}
 	
 	public String getParentListNewsPath() {
-		return parentPath;
+		return MgnlContext.getContextPath() + i18nURLFunctions.swapLocalizedURL(parentPath, MgnlContext.getAggregationState().getLocale().getLanguage());
 	}
 	
-	public Node getNextNews(Node node) {
-		if((linkedNavigationList.indexOf(node) + 1) > linkedNavigationList.size()) {
-			return linkedNavigationList.getFirst();
+	private int getIndexSearchNodeList(Node node) throws RepositoryException {
+		boolean finded = false;
+		Iterator<Node> iterator = navigationNewsList.iterator();
+		Node tmp = null;
+		int iteratorIndex = 0;
+		while(iterator.hasNext() && !finded) {
+			tmp = iterator.next();
+			finded = tmp.getIdentifier().equalsIgnoreCase(node.getIdentifier());
+			iteratorIndex++;
 		}
-		else {
-			return linkedNavigationList.get(linkedNavigationList.indexOf(node) + 1);
+		return --iteratorIndex;
+	}
+	
+	public Node getNextNews(Node node) throws RepositoryException {
+		if(navigationNewsList != null) {
+			if((getIndexSearchNodeList(node) + 1) > navigationNewsList.size() - 1) {
+				return navigationNewsList.get(0);
+			}
+			else {
+				return navigationNewsList.get(getIndexSearchNodeList(node) + 1);
+			}
+		}else {
+			return null;
 		}
 	}
 	
-	public Node getPreviousNews(Node node) {
-		if((linkedNavigationList.indexOf(node) - 1) < 0) {
-			return linkedNavigationList.getLast();
+	public Node getPreviousNews(Node node) throws RepositoryException {
+		if(navigationNewsList != null) {
+			if((getIndexSearchNodeList(node) - 1) < 0) {
+				return navigationNewsList.get(navigationNewsList.size() - 1);
+			}
+			else {
+				return navigationNewsList.get(getIndexSearchNodeList(node) - 1);
+			}
+		}else {
+			return null;
 		}
-		else {
-			return linkedNavigationList.get(linkedNavigationList.indexOf(node) - 1);
-		}
+	}
+	
+	public boolean listEmpty() {
+		return navigationNewsList == null;
+	}
+	
+	public boolean paramsEmpty() {
+		return this.listEmpty() && parentPath == null;
 	}
 
 }
